fixed socials div position on iphone/ipad

--- a/css/main.css
+++ b/css/main.css
@@ -1521,7 +1521,7 @@ img.top {
 }
 
 .socials {
-  position: absolute;
+  position: fixed;
   padding: 10px;
   bottom: 0;
   right: 0;
